--- a/css/styles.css
+++ b/css/styles.css
@@ -112,7 +112,66 @@ header h1{
     left: 5vw;
 }
 
+/* MARQUEE */
 
+.marquee {
+    width: 100%;
+    height: 90px;
+    overflow: hidden;
+  }
+  
+  .marquee li {
+    font-size: 5vh;
+    color: var(--verde);
+    padding: 0.1em;
+  }
+  
+  .marquee__content {
+    display: flex;
+    list-style: none;
+    animation: scrolling 10s linear infinite;
+  }
+  
+  .marquee__item {
+    flex-shrink: 0;
+  }
+  
+  @keyframes scrolling {
+    0% { transform: translateX(0) }
+    100% { transform: translateX(-100%) }
+  }
+
+  .marquee2 {
+    width: 100%;
+    height: 90px;
+    overflow: hidden;
+    margin-top: 10em;
+  }
+
+  .marquee2 li {
+    font-size: 5vh;
+    color: var(--rosa);
+    padding: 0.1em;
+  }
+
+  .marquee3 {
+    width: 100%;
+    height: 90px;
+    overflow: hidden;
+    margin-top: 3em;
+  }
+
+  .marquee3 li {
+    font-size: 5vh;
+    color: var(--naranja);
+    padding: 0.1em;
+  }
+  
+
+
+
+
+  
 
  /* MENÚ */
  
@@ -443,7 +502,7 @@ header h1{
     padding: 3em 0;
     align-items: stretch; 
     width: 100%;
-    margin-top: 8em;
+    margin-top: 2em;
    
 }
 
@@ -633,16 +692,14 @@ header h1{
 
 /* PARTICLES */
 #particles-js {
-    margin: 2em 5em 0em 5em;
     margin-bottom: 10vw;
     position: relative;
-    height: 70vh;
+    height: 35vh;
     background-color: var(--violeta);
-    border-radius: 50%;
 }
 
 #particles-js .jeje {
-    padding: 10em ;
+    padding: 2em ;
 }
 
 #particles-js h3 {
@@ -682,7 +739,7 @@ footer {
 footer h1 {
     font-size: 10vh;
     font-weight: bold;
-    color: var(--negro);
+    color: var(--gris);
     margin: 1em;
 }
 
@@ -694,13 +751,13 @@ footer .iconos {
 }
 
 footer .iconos a {
-    color: var(--negro);
+    color: var(--gris);
     padding: 1.2em;
 }
 
 footer .iconos a:hover {
-    color: var(--verde);
-    padding: 2em;
+    color: var(--amarillo);
+    
 }
 
 footer .datos {
@@ -713,14 +770,14 @@ footer .datos {
 }
 
 footer .legal {
-    color: var(--negro);
+    color: var(--gris);
     margin: 1em;
-    border-right: 1px solid var(--negro);
+    border-right: 1px solid var(--gris);
     
 }
 
 footer .legal p {
-    color: var(--negro);
+    color: var(--gris);
     font-size: 12px;
     margin: 1em 3em 1em 1em;
 }
@@ -731,7 +788,7 @@ footer .legal p:hover {
 }
 
 footer .copy {
-    color: var(--negro);
+    color: var(--amarillo);
     padding: 1em;
 }
 
