--- a/css/styles.css
+++ b/css/styles.css
@@ -118,6 +118,7 @@ header h1{
     width: 100%;
     height: 90px;
     overflow: hidden;
+    margin-top: -6em;
   }
   
   .marquee li {
@@ -145,7 +146,7 @@ header h1{
     width: 100%;
     height: 90px;
     overflow: hidden;
-    margin-top: 10em;
+    margin-top: 5em;
   }
 
   .marquee2 li {
@@ -348,7 +349,7 @@ header h1{
 }
 
 #gallery > div > div.row > div.gallery-item4.col > div:nth-child(1) > p{
-    width: 60vh;
+    width: 68vh;
     font-weight: 500;
     text-align: justify;
 }
@@ -398,8 +399,9 @@ header h1{
 }
 
 #gallery > div > div.row > div.gallery-item4.col > div.item4-imgs > img:nth-child(1){
-    height: 28vh;
+    height: 30vh;
     object-fit: cover;
+    margin-top: -1em;
 } 
 
 #gallery > div > div.row > div.gallery-item4.col > div.item4-img3 > img:nth-child(2){
@@ -427,8 +429,15 @@ header h1{
 #gallery > div > div.row > div.gallery-item5.col > div:nth-child(1) > div:nth-child(2) > p{
     margin-top: 1em;
     font-weight: 500;
-    /* text-align: justify; */
+    text-align: right;
     margin-left: -1em;
+    width: 38vh;
+}
+
+#gallery > div > div.row > div.gallery-item5.col > div > div.item5-texto > img{
+    margin-left: 15em;
+    margin-top: -20em;
+    height: 72vh;
 }
 
 
@@ -460,7 +469,7 @@ header h1{
 }
 
 .item5-texto h2{
-    margin-left: -10.5em;
+    margin-left: -8.5em;
     margin-top: -1.5em;
     font-size: 7vh;
     font-weight: 900;
@@ -682,27 +691,16 @@ header h1{
 
 #particles-js h3 {
     color: var(--verde);
+    text-transform: uppercase;
     font-size: 6vh;
-    font-weight: 800;
+    font-weight: 700;
     text-align: center;
     position: absolute;
     top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
-}
-
-/* .btn{
     background-color: var(--violeta);
-    border:var(--verde) 1px solid;
-    color: var(--verde);
-    border-radius: 100%;
 }
-
-.btn:hover{
-    background-color: var(--verde);
-    border:var(--verde) 1px solid;
-    color: var(--gris);
-} */
 
 
 footer {
@@ -805,10 +803,10 @@ footer .copy {
     }
 
     #gallery > div > div.row > div.gallery-item4.col > div.item4-imgs > img:nth-child(2){
-            width: 55vh;
-            height: 31vh;
-            margin-left: 11em;
-            margin-top: -8em;
+        width: 55vh;
+        height: 31vh;
+        margin-left: 15em;
+        margin-top: -7em;
     }
 
     .item4-title h1 {
@@ -850,21 +848,28 @@ footer .copy {
         flex-direction: row-reverse;
     }
 
+    #gallery > div > div.row > div.gallery-item5.col > div > div.item5-texto > img {
+        margin-left: -14em;
+        margin-top: -8em;
+        height: 27vh;
+    }
+
     .item5-imgTT .item5-title h1 {
         font-size: 11vh;
         width: 68vh;
         text-align: right;
-        margin-top: 0.5em;
-        margin-right: -1.5em;
+        margin-top: 0.85em;
+        margin-right: 0.5em;
         position: relative;
     }
 
     #gallery > div > div.row > div.gallery-item5.col > div:nth-child(1) > div:nth-child(2) > p{
-        width: 68vh;
-        margin-top: -5.2em;
+        width: 49vh;
+        margin-top: -4.2em;
         text-align: right;
-        margin-left: -2em;
+        margin-left: 7em;
     }
+
     #gallery > div > div.row > div.gallery-item5.col > div.item5-texto {
         max-width: 0vh;
     }
@@ -902,7 +907,24 @@ footer .copy {
         margin-left: -4.9em;
     }   
     .navbar .container-fluid{
-        margin-top: -0.8em;
+        margin-top: -0.5em;
+    }
+
+    #gallery > div > div.row > div.gallery-item4.col > div.item4-img3 > img:nth-child(1){
+        /* margin-top: 1em;
+        height: 43vh;
+        margin-left: -3em; */
+        display: none;
+    }
+
+    #gallery > div > div.row > div.gallery-item4.col > div.item4-img3 > img:nth-child(2) {
+        margin-left: 0em;
+        margin-top: 1em;
+        margin-right: 19em;
+    }
+
+    #gallery > div > div.row > div.gallery-item5.col > div > div.item5-texto > img{
+        display: none;
     }
 }
 
@@ -947,8 +969,29 @@ footer .copy {
     .card{
       width: 70vw !important;
     }
-   
+
+    #gallery > div > div.row > div.gallery-item5.col > div > div.item5-texto > img {
+        margin-left: -2em;
+        margin-top: -2em;
+        height: 17vh;
    }
+   #gallery > div > div.row > div.gallery-item4.col > div:nth-child(1) > p {
+    margin-top: 1em;
+    position: relative;
+    margin-left: -1em;
+   }
+
+   .gallery-item3 img {
+    height: 85vh;
+    width: 22vh;
+    object-fit: cover;
+    margin-left: -4em;
+   }
+
+   #gallery > div > div.row > div.gallery-item4.col > div.item4-imgs > img:nth-child(2) {
+    width: 30vh;
+   }
+}
 @media screen and (max-width: 850px){
   
     .gallery-item2 img{
@@ -972,6 +1015,10 @@ footer .copy {
 
         footer{
             height: 100vh;
+        }
+
+        #gallery > div > div.row > div.gallery-item4.col > div:nth-child(1) > p {
+            width: 90vh;
         }
 }
 
@@ -997,7 +1044,7 @@ footer .copy {
     }
 
     .gallery-item2 img{
-        width: 90vh;
+        width: 99vh;
         margin-left: -11em;
     }
 
@@ -1027,6 +1074,8 @@ footer .copy {
     #gallery > div > div.row > div.gallery-item4.col > div:nth-child(1) > p{
         margin-top: 0em;
         margin-bottom: 3em;
+        width: 68vh;
+        margin-left: 1em;
     }
 
     .item5-imgTT .item5-title h1{
@@ -1058,6 +1107,10 @@ footer .copy {
 
 @media screen and (max-width: 600px){
 
+    /* *{
+        border: 1px solid palegoldenrod;
+    } */
+
     /* body{
         background-color: rgb(252, 235, 235);
     } COLOR MONOOOO*/
@@ -1073,18 +1126,23 @@ footer .copy {
 
     .item4-title h1 {
         width: 23vh;
-        font-size: 7vh;
+        font-size: 6vh;
+        margin-left: 7em;
     }
 
     .gallery-item3 img {
         margin-left: 0em;
     }
 
+    #gallery > div > div.row > div.gallery-item4.col > div.item4-imgs > img:nth-child(1){
+        margin-left: 3em;
+    }
+
     #gallery > div > div.row > div.gallery-item4.col > div:nth-child(1) > p {
         margin-top: 0.5em;
         margin-bottom: 4em;
         font-size: 2.5vh;
-        margin-left: 1em;
+        margin-left: 4em;
         width: 55vh;
         height: 14vh;
     }
@@ -1112,6 +1170,7 @@ footer .copy {
 
     #gallery > div > div.row > div.gallery-item4.col > div.item4-img3 > img:nth-child(2) {
         width: 8em;
+        padding-left: 3em;
     }
 
     .gallery-item5 {
@@ -1141,11 +1200,11 @@ footer .copy {
 
     #gallery > div > div.row > div.gallery-item4.col > div:nth-child(1) > p {
         font-size: 2.2vh;
-        margin-left: 3em;
+        margin-left: 5em;
     }
 
     #gallery > div > div.row > div.gallery-item4.col > div.item4-img3 > img:nth-child(2) {
-        margin-top: -12em;
+        margin-top: -4em;
     }
 
     .gallery-item5 img {
@@ -1157,11 +1216,24 @@ footer .copy {
         display: none;
     }
 
+    .item5-imgTT .item5-title h1{
+        margin-top: 2em;
+    }
+
+    #gallery > div > div.row > div.gallery-item5.col > div > div.item5-imgTT > div.item5-title{
+        
+        margin-top: 21em;
+    }
+
+    #gallery > div > div.row > div.gallery-item4.col > div.item4-img3 > img:nth-child(2){
+        display: none;
+    }
+
     .item5-imgTT .item5-title h1 {
         width: 26vh;
-        margin-top: -2.5em;
+        margin-top: -1.7em;
         text-align: left;
-        margin-right: 2.5em;
+        margin-right: 5.5em;
     }
 
     #gallery > div > div.row > div.gallery-item5.col > div:nth-child(1) > div:nth-child(2) > p {
@@ -1173,7 +1245,16 @@ footer .copy {
     }
 
     .gallery-item5 img {
-        display: none;
+        margin-top: 0.5em;
+        margin-left: -12em;
+    }
+
+    #gallery > div > div.row > div.gallery-item5.col > div:nth-child(1) > div:nth-child(2) > p {
+        margin-top: -8.5em;
+        margin-left: 27em;
+        font-size: 2.2vh;
+        width: 43vh;
+        text-align: right;
     }
 
     #gallery > div > div.row > div.gallery-item4.col > div.item4-imgs > img:nth-child(1) {
@@ -1208,6 +1289,10 @@ footer .copy {
     #particles-js{
         height: 50vh;
     }
+
+    .marquee2 {
+        margin-top: 8em;
+    }
 }
 
 @media screen and (max-width: 450px){
@@ -1228,26 +1313,47 @@ footer .copy {
     }
     #gallery > div > div.row > div.gallery-item4.col > div.item4-imgs > img:nth-child(1) {
         margin-top: -2em;
-    }
-
-    #gallery > div > div.row > div.gallery-item4.col > div.item4-img3 > img:nth-child(1){
-        display:block;
+        width: 33vh;
     }
 
     #gallery > div > div.row > div.gallery-item5.col > div:nth-child(1) > div:nth-child(2) > p {
-        margin-top: 5.5em;
-        width: 62vh;
+        margin-top: -12.5em;
+        width: 29vh;
+        margin-left: 52em;
     }
     .gallery-item5 {
         height: 6vh;
     }
 
+    .gallery-item5 img {
+        margin-top: 10.5em;
+        margin-left: -15em;
+    }
+
+    #gallery > div > div.row > div.gallery-item5.col > div > div.item5-imgTT > div:nth-child(1) > img{
+        transform: translate(85%, 50%);
+        width: 26vh;
+    }
+
+    #gallery > div > div.row > div.gallery-item5.col > div > div.item5-imgTT > div.item5-title > h1{
+        margin-right: -3em;
+    }
+
     .item5-texto h2{
+        display: none;
+    }
+
+    #gallery > div > div.row > div.gallery-item4.col > div:nth-child(1) > p {
+        font-size: 2.2vh;
+        margin-left: 3em;
+        margin-bottom: 5em;
+    }
+
+    #gallery > div > div.row > div.gallery-item5.col > div > div.item5-texto > img {
+        margin-left: 47em;
+        margin-top: -23em;
+        height: 35vh;
         display: block;
-        display: block;
-        margin-left: 14.1em;
-        width: 31vh;
-        margin-top: -11em;
     }
 
     footer{
@@ -1267,5 +1373,13 @@ footer .copy {
 
     footer .legal{
         border: none;
+    }
+
+    .marquee2{
+        margin-top: 15em;
+    }
+
+    body > nav > div > button > i{
+        margin-top: -1em ;
     }
 }
