--- a/css/styles.css
+++ b/css/styles.css
@@ -204,17 +204,16 @@ header h1{
         color: var(--rosa)!important;
         transition: 0.5s;
     }
-    
-    .nav-item {
-        margin: 0em 1.5em;
-    }
 
     
     .nav-item a{
         color: var(--morado);
-        /* transform: rotate(180deg); */
-        font-weight: 500;
-        text-transform: uppercase;
+    /* transform: rotate(180deg); */
+    font-weight: 500;
+    text-transform: uppercase;
+    background-color: var(--fondo);
+    padding-left: 1em;
+    width: 11em;
     }
     
     .dropdown-menu{
@@ -233,6 +232,8 @@ header h1{
     
     .navbar-expand-lg .navbar-collapse {
         justify-content: flex-end;
+        background-color: var(--fondo);
+    border-radius: 7px;
     }
     .navbar-nav{
         margin-right: 0 !important;
@@ -306,6 +307,9 @@ header h1{
 }
 
     /* sección galeria imagenes  */
+    #gallery{
+        width: 100vw;
+    }
     
     .gallery-item2 {
         height: 20vh;
@@ -415,7 +419,7 @@ header h1{
 
 .gallery-item5 img{
     height: 40vh;
-    width: 30vh;
+    width: 25vh;
     object-fit: cover;
 }
 #gallery > div > div.row > div.gallery-item5.col > div.item5-texto > img{
@@ -431,7 +435,7 @@ header h1{
     font-weight: 500;
     text-align: right;
     margin-left: -1em;
-    width: 38vh;
+    width: 30vh;
 }
 
 #gallery > div > div.row > div.gallery-item5.col > div > div.item5-texto > img{
@@ -769,6 +773,42 @@ footer .copy {
     padding: 1em;
 }
 
+/* MEDIAQUEERIES */
+
+
+@media screen and (max-width: 1200px) {
+    #gallery > div > div.row > div.gallery-item5.col > div > div.item5-texto > img{
+        margin-left: 4em;
+    margin-top: 1em;
+    height: 29vh;
+    }
+    #gallery > div > div.row > div.gallery-item4.col > div:nth-child(1) > p{
+        width: 56vh;
+    }
+    .item5-imgTT .item5-title h1{
+        margin-left: -5em;
+    }
+    .gallery-item2 img{
+        width: 75vw;
+    }
+    #ar-container img:nth-child(1){
+        top: 33vw;
+    }
+    #ar-container img:nth-child(2){
+        top: 35vw;
+    }
+    #ar-container img:nth-child(3){
+        top: 7vw;
+    }
+    #ar-container img:nth-child(7){
+        top: 50vw;
+    }
+    #ar-container img:nth-child(8){
+        top: 51vw;
+    }
+
+}
+
 @media (max-width: 1100px) {
  .card{
    width: 26vw !important;
@@ -793,7 +833,7 @@ footer .copy {
     }
     
     .gallery-item2 img{
-        width: 118vh;
+        width: 81VW;
         margin-left: -1em;
     }
 
@@ -819,7 +859,7 @@ footer .copy {
     #gallery > div > div.row > div.gallery-item4.col > div.item4-img3 > img:nth-child(1){
         margin-top: 1em;
         height: 43vh;
-        margin-left: -3em;
+        /* margin-left: -3em; */
     }
 
     #gallery > div > div.row > div.gallery-item4.col > div.item4-img3 > img:nth-child(2) {
@@ -835,7 +875,7 @@ footer .copy {
     }
 
     .gallery-item5 img {
-        width: 34vh;
+        width: 24vh;
         margin-top: -15em;
         height: 70vh;
     }
@@ -849,8 +889,8 @@ footer .copy {
     }
 
     #gallery > div > div.row > div.gallery-item5.col > div > div.item5-texto > img {
-        margin-left: -14em;
-        margin-top: -8em;
+        margin-left: -6em;
+        margin-top: -11em;
         height: 27vh;
     }
 
@@ -859,13 +899,13 @@ footer .copy {
         width: 68vh;
         text-align: right;
         margin-top: 0.85em;
-        margin-right: 0.5em;
+        margin-right: 1em;
         position: relative;
     }
 
     #gallery > div > div.row > div.gallery-item5.col > div:nth-child(1) > div:nth-child(2) > p{
         width: 49vh;
-        margin-top: -4.2em;
+        margin-top: -7em;
         text-align: right;
         margin-left: 7em;
     }
@@ -886,9 +926,28 @@ footer .copy {
         text-align: right;
         position: relative;
     }
+    #ar-container img:nth-child(3){
+        top: 12vw;
+    }
+    #ar-container img:nth-child(7){
+        top: 64vw;
+    }
+    #ar-container img:nth-child(8){
+        top: 58vw;
+    }
+    #ar-container img:nth-child(1){
+        top: 38vw;
+    }
+    #ar-container img:nth-child(2){
+        top: 45vw;
+    }
+    #ar-container img:nth-child(4){
+        top: 20vw;
+    }
 }
 
-@media (max-width: 1000px) {
+
+@media (max-width: 100px) {
     .card-text{
     font-size: 0.6em !important;
    }
@@ -907,7 +966,7 @@ footer .copy {
         margin-left: -4.9em;
     }   
     .navbar .container-fluid{
-        margin-top: -0.5em;
+        margin-top: -0.8em;
     }
 
     #gallery > div > div.row > div.gallery-item4.col > div.item4-img3 > img:nth-child(1){
@@ -925,6 +984,19 @@ footer .copy {
 
     #gallery > div > div.row > div.gallery-item5.col > div > div.item5-texto > img{
         display: none;
+    }
+    .gallery-item5 img{
+        MARGIN-LEFT: -22VW;
+        margin-top: -19em;
+    }
+    #gallery > div > div.row > div.gallery-item5.col > div:nth-child(1) > div:nth-child(2) > p{
+        margin-left: 12em;
+    }
+    .item5-imgTT .item5-title h1{
+        margin-top: 0.5em;
+    }
+    #gallery > div > div.row > div.gallery-item4.col > div.item4-imgs > img:nth-child(2){
+        margin-top: -6em;
     }
 }
 
@@ -982,20 +1054,64 @@ footer .copy {
    }
 
    .gallery-item3 img {
-    height: 85vh;
-    width: 22vh;
-    object-fit: cover;
-    margin-left: -4em;
+    height: 79vh;
+        width: 19vh;
+        object-fit: cover;
+        margin-left: -2em;
    }
 
    #gallery > div > div.row > div.gallery-item4.col > div.item4-imgs > img:nth-child(2) {
     width: 30vh;
    }
-}
+   .gallery-item2 img{
+    width: 84vh;
+   }
+   #gallery > div > div.row > div.gallery-item4.col > div.item4-imgs > img:nth-child(1){
+    height: 25vh;
+   }
+   #gallery > div > div.row > div.gallery-item4.col > div:nth-child(1) > p{
+    width: 42vh;
+   }
+   .item4-title h1{
+    margin-left: 2.5em;
+    margin-top: -2.2em;
+        font-size: 9vh;
+   }
+   .gallery-item5 img{
+    MARGIN-LEFT: -32VW;
+   }
+   #gallery > div > div.row > div.gallery-item5.col > div:nth-child(1) > div:nth-child(2) > p{
+    margin-left: 6em;
+   }
+   #gallery > div > div.row > div.gallery-item4.col > div.item4-imgs > img:nth-child(2){
+    width: 25vh;
+    margin-top: -8em;
+    height: 28vh;
+        margin-left: 10em;
+   }
+   #ar-container img:nth-child(7){
+    top: 76vw;
+   }
+   #ar-container img:nth-child(8){
+    top: 69vw;
+   }
+   #ar-container img:nth-child(2){
+    top: 52vw;
+   }
+   #ar-container img:nth-child(1){
+    top: 48vw;
+    }
+    #ar-container img:nth-child(3){
+        top: 18vw;
+    }
+    .arrastra {
+        width: 16%;}
+    }
+
 @media screen and (max-width: 850px){
   
     .gallery-item2 img{
-        width: 103vh;
+        width: 80VW;
         margin-left: -4.9em;
     }
 
@@ -1018,7 +1134,10 @@ footer .copy {
         }
 
         #gallery > div > div.row > div.gallery-item4.col > div:nth-child(1) > p {
-            width: 90vh;
+            width: 60VW;
+        }
+        .gallery-item5 img{
+            MARGIN-LEFT: -24VW;
         }
 }
 
@@ -1036,7 +1155,31 @@ footer .copy {
     }
    }
    }
-
+   @media screen and (max-width: 770px){
+    .gallery-item3 img{
+        height: 27VW;
+    }
+    #gallery > div > div.row > div.gallery-item4.col > div:nth-child(1) > p{
+        width: 45VW;
+        margin-top: -10em;
+        margin-left: 12em;
+    }
+    #gallery > div > div.row > div.gallery-item4.col > div.item4-imgs > img:nth-child(1){
+        height: 23vW;
+        width: 25vW;
+        margin-top: 1em;
+    }
+    .item4-title h1{
+        margin-left: 3.5em;
+    }
+    #gallery > div > div.row > div.gallery-item5.col > div:nth-child(1) > div:nth-child(2) > p{
+        margin-left: 17em;
+        width: 43vw;
+    }
+    .gallery-item2 img{
+        width: 71VW;
+    }
+   }
 @media screen and (max-width: 750px){
      
     .item5-imgTT{
@@ -1100,8 +1243,24 @@ footer .copy {
         margin-top: -0.5em;
         margin-left: 20em;
     }
+    .gallery-item3 img{
+        display: none;
+    }
     footer{
         height: 100vh;
+    }
+    #ar-container img:nth-child(7){
+        top: 89vw;
+    }
+    #ar-container img:nth-child(8){
+        top: 77vw;
+    }
+    #ar-container img:nth-child(1){
+        top: 64vw;
+        left: 30vw;
+    }
+    #ar-container img:nth-child(3){
+        top: 26vw;
     }
 }
 
@@ -1120,7 +1279,7 @@ footer .copy {
     }
 
     .gallery-item2 img{
-        width: 75vh;
+        width: 82vw;
         margin-left: -6em;
     }
 
@@ -1136,6 +1295,9 @@ footer .copy {
 
     #gallery > div > div.row > div.gallery-item4.col > div.item4-imgs > img:nth-child(1){
         margin-left: 3em;
+        height: 31vW;
+        width: 43vW;
+        margin-top: -2em;
     }
 
     #gallery > div > div.row > div.gallery-item4.col > div:nth-child(1) > p {
@@ -1145,6 +1307,7 @@ footer .copy {
         margin-left: 4em;
         width: 55vh;
         height: 14vh;
+        
     }
 
     #gallery > div > div.row > div.gallery-item4.col > div.item4-img3 > img:nth-child(1) {
@@ -1169,7 +1332,7 @@ footer .copy {
     }
 
     #gallery > div > div.row > div.gallery-item4.col > div.item4-img3 > img:nth-child(2) {
-        width: 8em;
+        width: 15em;
         padding-left: 3em;
     }
 
@@ -1184,6 +1347,21 @@ footer .copy {
 
     footer .datos p {
         font-size: 0.7em;
+    }
+    #ar-container img:nth-child(7){
+        top: 113vw;
+    }
+    #ar-container img:nth-child(2){
+        top: 77vw;
+    }
+    #ar-container img:nth-child(1){
+        top: 81vw;
+    }
+    #ar-container img:nth-child(8){
+        top: 107vw;
+    }
+    #ar-container img:nth-child(4){
+        top: 36vw;
     }
 
 }   
@@ -1293,6 +1471,14 @@ footer .copy {
     .marquee2 {
         margin-top: 8em;
     }
+    #ar-container img:nth-child(7){
+        top: 137vw;}
+    #ar-container img:nth-child(8){
+        top: 117vw;
+    }
+    #ar-container img:nth-child(2){
+        top: 94vw;
+    }
 }
 
 @media screen and (max-width: 450px){
@@ -1381,5 +1567,14 @@ footer .copy {
 
     body > nav > div > button > i{
         margin-top: -1em ;
+    }
+    #ar-container img:nth-child(7){
+        top: 161vw;
+    }
+    #ar-container img:nth-child(8){
+        top: 138vw;
+    }
+    #ar-container img:nth-child(2){
+        top: 114vw;
     }
 }
